# fastapi-temporal

./: .gitignore  README.md  llms.txt  pyproject.toml
examples/example_app/: callbacks.py  streamlit_ui.py  temporal_worker.py  temporal_workflow.py
examples/example_app/activities/: llm_call.py  text_to_speech.py  write_txt_file.py
fast_temporal.egg-info/: PKG-INFO  requires.txt
fastapi_temporal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
fastapi_temporal/api/: fastapi_comm.py
fastapi_temporal/config/: config.py
fastapi_temporal/workflow/: workflow.py
