[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-temporal"
version = "0.1.0"
description = "A FastAPI-Temporal package that communicates using Temporal Queries and streams updates via websocket."
authors = [
    { name = "Vinnakota Harshith", email = "v.harshith2000@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "temporalio",
    "websockets"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/fastapi-temporal" 